# programmer_idea

./: .gitignore  CMakeLists.txt  readme.md
cmake/: AddFolderSubdirectories.cmake  AddSourceGroups.cmake
compiler/: CMakeLists.txt  c_style_grammer.txt  vm_structure.txt
compiler/compiler_basic/: CMakeLists.txt  cl_parser.cpp  cl_parser.h  instruction.h  lexer.cpp  lexer.h  parser.cpp  parser.h  symbol.cpp  symbol.h  symbol_table.cpp  symbol_table.h  virtual_machine.cpp  virtual_machine.h
compiler/doc/: language.txt
compiler/practice/: CMakeLists.txt
compiler/practice/expression_parser_main/: CMakeLists.txt  expression_parser_main.cpp
compiler/unit_test/: CMakeLists.txt
compiler/unit_test/unit_test_clparser_main/: CMakeLists.txt  unit_test_clparser_main.cpp
compiler/unit_test/unit_test_lexer_main/: CMakeLists.txt  unit_test_lexer_main.cpp
compiler/unit_test/unit_test_parser_main/: CMakeLists.txt  unit_test_parser_main.cpp
quant_min/: CMakeLists.txt  README.md
quant_min/cmake/: CompilerWarnings.cmake
quant_min/data/: sample_ticks.csv
quant_min/include/backtest/: execution.hpp  market_view.hpp  oms.hpp  orders.hpp  risk.hpp
quant_min/include/backtest3/: engine.hpp  execution_sim.hpp  multi_market_view.hpp  orders.hpp  portfolio.hpp  portfolio_risk.hpp  replay.hpp  scheduler.hpp  strategy_pairs.hpp  strategy_portfolio.hpp  symbol_context.hpp  symbol_index.hpp  thread_pool.hpp  types.hpp  worker_pool.hpp
quant_min/include/book/: book_builder.hpp  flat_l2_book.hpp  l2_book.hpp
quant_min/include/common/: backoff.hpp  clock.hpp  csv.hpp  latency.hpp  log.hpp  spsc_ring.hpp
quant_min/include/market/: event.hpp  replay.hpp
quant_min/src/: backtest_main.cpp  live_binance_m1.cpp  main.cpp  main_not_stable.cpp  multi_backtest_main.cpp
quant_min/src/market/: replay.cpp
quant_min/tools/: gen_md_events.py  gen_ticks.py
web/: portofolio.html
web/quote/: quote.html
